--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,7 +6,7 @@
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
-  <link rel="stylesheet" type="text/css" href="static/style.css" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}" />
 </head>
 
 <body>
@@ -22,11 +22,11 @@
       <div id="menubar">
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li><a href="index.html">Home</a></li>
-          <li><a href="examples.html">Examples</a></li>
-          <li><a href="page.html">A Page</a></li>
-          <li><a href="another_page.html">Another Page</a></li>
-          <li class="selected"><a href="contact.html">Contact Us</a></li>
+          <li class="selected"><a href="{{url_for("index")}}">Home</a></li>
+          <li><a href="{{url_for("examples")}}">Examples</a></li>
+          <li><a href="{{url_for("page")}}">A Page</a></li>
+          <li><a href="{{url_for("another_page")}}">Another Page</a></li>
+          <li><a href="{{url_for("contact")}}">Contact Us</a></li>
         </ul>
       </div>
     </div>
@@ -53,7 +53,7 @@
         <form method="post" action="#" id="search_form">
           <p>
             <input class="search" type="text" name="search_field" value="Enter keywords....." />
-            <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="static/search.png" alt="Search" title="Search" />
+            <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="{{ url_for('static', filename='search.png') }}" alt="Search" title="Search" />
           </p>
         </form>
       </div>
@@ -74,7 +74,7 @@
     </div>
     <div id="content_footer"></div>
     <div id="footer">
-      <p><a href="index.html">Home</a> | <a href="examples.html">Examples</a> | <a href="page.html">A Page</a> | <a href="another_page.html">Another Page</a> | <a href="contact.html">Contact Us</a></p>
+      <p><a href="{{url_for("index")}}">Home</a> | <a href="{{url_for("examples")}}">Examples</a> | <a href="{{url_for("page")}}">A Page</a> | <a href="{{url_for("another_page")}}">Another Page</a> | <a href="{{url_for("contact")}}">Contact Us</a></p>
       <p>Copyright &copy; shadowplay_2 | <a href="http://validator.w3.org/check?uri=referer">HTML5</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> | <a href="http://www.html5webtemplates.co.uk">design from HTML5webtemplates.co.uk</a></p>
     </div>
   </div>
