pipenv shell fixes

--- a/templates/another_page.html
+++ b/templates/another_page.html
@@ -25,7 +25,7 @@
           <li><a href="{{url_for("index")}}">Home</a></li>
           <li><a href="{{url_for("examples")}}">Examples</a></li>
           <li><a href="{{url_for("page")}}">A Page</a></li>
-          <li><a href="{{url_for("another_page")}}">Another Page</a></li>
+          <li  class = "selected"><a href="{{url_for("another_page")}}">Another Page</a></li>
           <li><a href="{{url_for("contact")}}">Contact Us</a></li>
         </ul>
       </div>
