--- a/templates/contact.html
+++ b/templates/contact.html
@@ -22,11 +22,11 @@
       <div id="menubar">
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li class="selected"><a href="{{url_for("index")}}">Home</a></li>
+          <li><a href="{{url_for("index")}}">Home</a></li>
           <li><a href="{{url_for("examples")}}">Examples</a></li>
           <li><a href="{{url_for("page")}}">A Page</a></li>
           <li><a href="{{url_for("another_page")}}">Another Page</a></li>
-          <li><a href="{{url_for("contact")}}">Contact Us</a></li>
+          <li  class = "selected"><a href="{{url_for("contact")}}">Contact Us</a></li>
         </ul>
       </div>
     </div>
