--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
       <div id="menubar">
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li><a href="{{url_for("index")}}">Home</a></li>
+          <li  class = "selected"><a href="{{url_for("index")}}">Home</a></li>
           <li><a href="{{url_for("examples")}}">Examples</a></li>
           <li><a href="{{url_for("page")}}">A Page</a></li>
           <li><a href="{{url_for("another_page")}}">Another Page</a></li>
