--- a/templates/defaults.html
+++ b/templates/defaults.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Plumb the Market</title>
+  <title>Plumb the Market - defaults page</title>
   <meta name="description" content="your investing scoreboard" />
   <meta name="keywords" content="AIM, investing, market, scoreboard" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
@@ -22,9 +22,9 @@
       <div id="menubar">
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li  class = "selected"><a href="{{url_for("index")}}">Home</a></li>
+          <li><a href="{{url_for("index")}}">Home</a></li>
           <li><a href="{{url_for("folder")}}">Folder</a></li>
-          <li><a href="{{url_for("defaults")}}">Defaults</a></li>
+          <li  class = "selected"><a href="{{url_for("defaults")}}">Defaults</a></li>
           <li><a href="{{url_for("examples")}}">Examples</a></li>
         </ul>
       </div>
@@ -54,7 +54,7 @@
       </div>
       <div id="content">
         <!-- insert the page content here -->
-        <h1>Scoreboard</h1>
+        <h1>Defaults</h1>
       </div>
     </div>
     <div id="content_footer"></div>
