--- a/templates/folder.html
+++ b/templates/folder.html
@@ -55,6 +55,13 @@
       <div id="content">
         <!-- insert the page content here -->
         <h1>Folder</h1>
+        <table style="width:100%; border-spacing:0;">
+          <tr><th>Item</th><th>Description</th></tr>
+          <tr><td>Item 1</td><td>Description of Item 1</td></tr>
+          <tr><td>Item 2</td><td>Description of Item 2</td></tr>
+          <tr><td>Item 3</td><td>Description of Item 3</td></tr>
+          <tr><td>Item 4</td><td>Description of Item 4</td></tr>
+        </table>
       </div>
     </div>
     <div id="content_footer"></div>
