--- a/templates/defaults.html
+++ b/templates/defaults.html
@@ -25,48 +25,21 @@
           <li><a href="{{url_for("index")}}">Home</a></li>
           <li><a href="{{url_for("folder")}}">Folder</a></li>
           <li  class = "selected"><a href="{{url_for("defaults")}}">Defaults</a></li>
-          <li><a href="{{url_for("examples")}}">Examples</a></li>
+          <li><a href="{{url_for("history")}}">History</a></li>
         </ul>
       </div>
     </div>
     <div id="content_header"></div>
     <div id="site_content">
-      <div class="sidebar">
-        <!-- insert your sidebar items here -->
-        <h3>Latest News</h3>
-        <h5>May 7th, 2018</h5>
-        <p>Began the construction of this page.<br /></p>
-        <!--h5>January 1st, 2011</h5>
-        <p>2011 sees the redesign of our website. Take a look around and let us know what you think.<br /><a href="#">Read more</a></p>
-        <h3>Useful Links</h3-->
-        <ul>
-          <li><a href="https://amazon.com/author/smithja" target="_blank" >my Amazon Bookshelf</a></li>
-          <li><a href="https://github.com/meprogrammerguy" target="_blank" >my GitHub page</a></li>
-          <li><a href="http://meprogrammerguy.com/" target="_blank" >my Blog</a></li>
-        </ul>
-        <h3>Search</h3>
-        <form method="post" action="#" id="search_form">
-          <p>
-            <input class="search" type="text" name="search_field" value="Enter keywords....." />
-            <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="{{ url_for('static', filename='search.png') }}" alt="Search" title="Search" />
-          </p>
-        </form>
-      </div>
       <div id="content">
         <!-- insert the page content here -->
         <h1>Defaults</h1>
-        <table style="width:100%; border-spacing:0;">
-          <tr><th>Item</th><th>Description</th></tr>
-          <tr><td>Item 1</td><td>Description of Item 1</td></tr>
-          <tr><td>Item 2</td><td>Description of Item 2</td></tr>
-          <tr><td>Item 3</td><td>Description of Item 3</td></tr>
-          <tr><td>Item 4</td><td>Description of Item 4</td></tr>
-        </table>
+        {{table | safe}}
       </div>
     </div>
     <div id="content_footer"></div>
     <div id="footer">
-      <p><a href="{{url_for("index")}}">Home</a> | <a href="{{url_for("folder")}}">Folder</a> | <a href="{{url_for("defaults")}}">Defaults</a> | <a href="{{url_for("examples")}}">Examples</a></p>
+      <p><a href="{{url_for("index")}}">Home</a> | <a href="{{url_for("folder")}}">Folder</a> | <a href="{{url_for("defaults")}}">Defaults</a> | <a href="{{url_for("history")}}">History</a></p>
       <p>Copyright &copy; shadowplay_2  | <a href="http://www.html5webtemplates.co.uk">design from HTML5webtemplates.co.uk</a></p>
     </div>
   </div>
