--- a/templates/folder.html
+++ b/templates/folder.html
@@ -25,7 +25,7 @@
           <li><a href="{{url_for("index")}}">Home</a></li>
           <li  class = "selected"><a href="{{url_for("folder")}}">Folder</a></li>
           <li><a href="{{url_for("defaults")}}">Defaults</a></li>
-          <li><a href="{{url_for("examples")}}">Examples</a></li>
+          <li><a href="{{url_for("history")}}">History</a></li>
         </ul>
       </div>
     </div>
@@ -47,7 +47,7 @@
         <h3>Search</h3>
         <form method="post" action="#" id="search_form">
           <p>
-            <input class="search" type="text" name="search_field" value="Enter keywords....." />
+            <input class="search" type="text" name="search_field" value="Ticker symbol" />
             <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="{{ url_for('static', filename='search.png') }}" alt="Search" title="Search" />
           </p>
         </form>
@@ -55,18 +55,12 @@
       <div id="content">
         <!-- insert the page content here -->
         <h1>Folder</h1>
-        <table style="width:100%; border-spacing:0;">
-          <tr><th>Item</th><th>Description</th></tr>
-          <tr><td>Item 1</td><td>Description of Item 1</td></tr>
-          <tr><td>Item 2</td><td>Description of Item 2</td></tr>
-          <tr><td>Item 3</td><td>Description of Item 3</td></tr>
-          <tr><td>Item 4</td><td>Description of Item 4</td></tr>
-        </table>
+        {{table | safe}}
       </div>
     </div>
     <div id="content_footer"></div>
     <div id="footer">
-      <p><a href="{{url_for("index")}}">Home</a> | <a href="{{url_for("folder")}}">Folder</a> | <a href="{{url_for("defaults")}}">Defaults</a> | <a href="{{url_for("examples")}}">Examples</a></p>
+      <p><a href="{{url_for("index")}}">Home</a> | <a href="{{url_for("folder")}}">Folder</a> | <a href="{{url_for("defaults")}}">Defaults</a> | <a href="{{url_for("history")}}">History</a></p>
       <p>Copyright &copy; shadowplay_2  | <a href="http://www.html5webtemplates.co.uk">design from HTML5webtemplates.co.uk</a></p>
     </div>
   </div>
