--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
           <li  class = "selected"><a href="{{url_for("index")}}">Home</a></li>
           <li><a href="{{url_for("folder")}}">Folder</a></li>
           <li><a href="{{url_for("defaults")}}">Defaults</a></li>
-          <li><a href="{{url_for("examples")}}">Examples</a></li>
+          <li><a href="{{url_for("history")}}">History</a></li>
         </ul>
       </div>
     </div>
@@ -44,22 +44,16 @@
           <li><a href="https://github.com/meprogrammerguy" target="_blank" >my GitHub page</a></li>
           <li><a href="http://meprogrammerguy.com/" target="_blank" >my Blog</a></li>
         </ul>
-        <h3>Search</h3>
-        <form method="post" action="#" id="search_form">
-          <p>
-            <input class="search" type="text" name="search_field" value="Enter keywords....." />
-            <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="{{ url_for('static', filename='search.png') }}" alt="Search" title="Search" />
-          </p>
-        </form>
       </div>
       <div id="content">
         <!-- insert the page content here -->
         <h1>Scoreboard</h1>
+        {{table | safe}}
       </div>
     </div>
     <div id="content_footer"></div>
     <div id="footer">
-      <p><a href="{{url_for("index")}}">Home</a> | <a href="{{url_for("folder")}}">Folder</a> | <a href="{{url_for("defaults")}}">Defaults</a> | <a href="{{url_for("examples")}}">Examples</a></p>
+      <p><a href="{{url_for("index")}}">Home</a> | <a href="{{url_for("folder")}}">Folder</a> | <a href="{{url_for("defaults")}}">Defaults</a> | <a href="{{url_for("history")}}">History</a></p>
       <p>Copyright &copy; shadowplay_2  | <a href="http://www.html5webtemplates.co.uk">design from HTML5webtemplates.co.uk</a></p>
     </div>
   </div>
