progress on web page

--- a/static/style.css
+++ b/static/style.css
@@ -309,7 +309,7 @@ table tr th, table tr td
 { background: #3B3B3B;
   color: #FFF;
   padding: 7px 4px;
-  text-align: left;}
+  text-align: right;}
   
 table tr td
 { background: #FFF;
