--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,28 @@
       <div id="content">
         <!-- insert the page content here -->
         <h1>Scoreboard</h1>
+        <div class="left">
+            <h2>Balance</h2>
+            <ul>
+                <li>Cash 50%</li>
+                <li>Stock 50%</li>
+            </ul>
+        </div>
+        <div class="right">
+            <h2>Allocation</h2>
+            <ul>
+                <li>Cash 50%</li>
+                <li>Stock 50%</li>
+            </ul>
+        </div>
+        <div class="center">
+            <h2>Value</h2>
+            <p><strong>Initial $10,000</strong></p>
+            <p><strong>Current $20,000</strong></p>
+            <p><strong>Profit $10,000</strong></p>
+            <p><strong>Percent 32%</strong></p>
+        </div>
+        <h1>A.I.M. method</h1>
         {{table | safe}}
       </div>
     </div>
