--- a/templates/index.html
+++ b/templates/index.html
@@ -51,23 +51,19 @@
         <div class="left">
             <h2>Balance</h2>
             <ul>
-                <li>Cash 50%</li>
-                <li>Stock 50%</li>
+                {{balance_list | safe}}
             </ul>
         </div>
         <div class="right">
             <h2>Allocation</h2>
             <ul>
-                <li>Cash 50%</li>
-                <li>Stock 50%</li>
+                {{allocation_list | safe}}
             </ul>
         </div>
         <div class="center">
             <h2>Value</h2>
-            <p><strong>Initial $10,000</strong></p>
-            <p><strong>Current $20,000</strong></p>
-            <p><strong>Profit $10,000</strong></p>
-            <p><strong>Percent 32%</strong></p>
+            <p><strong>Initial {{initial_value | safe}}</strong></p>
+            <p><strong>Profit {{profit_value | safe}} or {{profit_percent | safe}}</strong></p>
         </div>
         <h1>A.I.M. method</h1>
         {{table | safe}}
