--- a/templates/history.html
+++ b/templates/history.html
@@ -54,7 +54,8 @@
       </div>
       <div id="content">
         <!-- insert the page content here -->
-        <h1>Examples</h1>
+        <h1>History</h1>
+        {{table | safe}}
         <p>This page contains examples of all the styled elements available as part of this design. Use this page for reference, whilst you build your website.</p>
         <h2>Headings</h2>
         <p>These are the different heading formats:</p>
