--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,12 @@
             <p><strong>Profit {{profit_value | safe}} or {{profit_percent | safe}}</strong></p>
         </div>
         <h1>A.I.M. method</h1>
+        <div class="center">
+            <h4>Check list</h4>
+                <p>Correct any issues with your folder to get accurate numbers</p>
+                <p>You do not have to post, buy or sell if you are just looking</p>
+                <p>When you do press the buy or sell make sure to follow through with your broker</p>
+        </div>
         {{table | safe}}
       </div>
     </div>
