--- a/templates/history.html
+++ b/templates/history.html
@@ -55,6 +55,7 @@
       <div id="content">
         <!-- insert the page content here -->
         <h1>History</h1>
+        <h4 class = "center">Year : {{year}}</h4>
         {{table | safe}}
         <p>This page contains examples of all the styled elements available as part of this design. Use this page for reference, whilst you build your website.</p>
         <h2>Headings</h2>
