--- a/templates/index.html
+++ b/templates/index.html
@@ -34,11 +34,10 @@
       <div class="sidebar">
         <!-- insert your sidebar items here -->
         <h3>Latest News</h3>
-        <h5>May 7th, 2018</h5>
-        <p>Began the construction of this page.<br /></p>
-        <!--h5>January 1st, 2011</h5>
-        <p>2011 sees the redesign of our website. Take a look around and let us know what you think.<br /><a href="#">Read more</a></p>
-        <h3>Useful Links</h3-->
+        {% for note in notes %}
+            <h5>{{ note.noteDate() }}</h5>
+            <p>{{ note.content }}</p>
+        {% endfor %}
         <ul>
           <li><a href="https://amazon.com/author/smithja" target="_blank" >my Amazon Bookshelf</a></li>
           <li><a href="https://github.com/meprogrammerguy" target="_blank" >my GitHub page</a></li>
