--- a/templates/folder.html
+++ b/templates/folder.html
@@ -21,7 +21,6 @@
       </div>
       <div id="menubar">
         <ul id="menu">
-          <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
           <li><a href="{{url_for("index")}}">Home</a></li>
           <li  class = "selected"><a href="{{url_for("folder")}}">Folder</a></li>
           <li><a href="{{url_for("defaults")}}">Defaults</a></li>
@@ -31,76 +30,81 @@
     </div>
     <div id="content_header"></div>
     <div id="site_content">
-      <div class="sidebar">
-        <!-- insert your sidebar items here -->
+        <div class="sidebar">
         <h3>Latest News</h3>
         <h5>May 7th, 2018</h5>
         <p>Began the construction of this page.<br /></p>
-        <!--h5>January 1st, 2011</h5>
-        <p>2011 sees the redesign of our website. Take a look around and let us know what you think.<br /><a href="#">Read more</a></p>
-        <h3>Useful Links</h3-->
         <ul>
           <li><a href="https://amazon.com/author/smithja" target="_blank" >my Amazon Bookshelf</a></li>
           <li><a href="https://github.com/meprogrammerguy" target="_blank" >my GitHub page</a></li>
           <li><a href="http://meprogrammerguy.com/" target="_blank" >my Blog</a></li>
+          <li><a href="https://twitter.com/meprogrammerguy/" target="_blank" >my Twitter</a></li>
+          <li><a href="http://www.wallstreetsurvivor.com/accountoverview/" target="_blank" >Wall Street Survivor</a></li>
         </ul>
         <h3>Search</h3>
-        <form method="post" action="#" id="search_form">
+        <form method="post" action="#">
           <p>
-            <input class="search" type="text" onfocus="this.value=''" name="search_field" value="Ticker symbol" />
+            <input class="search" type="text" onfocus="this.value=''" name="action" value="Ticker symbol" />
             <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="{{ url_for('static', filename='search.png') }}" alt="Search" title="Search" />
+            <p>{{search_error | safe}}</p>
           </p>
         </form>
-      </div>
-      <div id="content">
-        <!-- insert the page content here -->
-        <h1>Folder</h1>
-        {{table | safe}}
-        <h1>Adjustments</h1>
-        <form action="#" method="post">
+        </div>
+        <div id="content">
+            <h1>Portfolio</h1>
+            {{table | safe}}
+
+            <div class ="left" style="{{ticker_style}}">
+                <h1>Ticker Symbol Lookup</h1>
+	        <p>{{ticker_description}}</p>
+	        <table border=1>
+	            <thead>
+	                <tr>
+		            <th>symbol</th>
+		            <th>companyName</th>
+		            <th>exchange</th>
+		            <th>industry</th>
+		            <th>website</th>
+		            <th>CEO</th>
+		            <th>issueType</th>
+		            <th>sector</th>
+		        </tr>
+	            </thead>
+	            <tbody>
+		        <tr>
+		            <td>{{ticker_symbol}}</td>
+		            <td>{{ticker_name}}</td>
+		            <td>{{ticker_exchange}}</td>
+		            <td>{{ticker_industry}}</td>
+		            <td>{{ticker_website}}</td>
+		            <td>{{ticker_ceo}}</td>
+		            <td>{{ticker_issuetype}}</td>
+		            <td>{{ticker_sector}}</td>
+		        </tr>
+	            </tbody>
+	        </table>
+         <form action="#" method="post">
           <div class="form_settings">
-            <p><span class="right">symbol: </span><select id="id" name="symbol"><option value="1">$</option><option value="2">UPRO</option></select></p>
-            <p><span class="right">balance: </span><input type="text" name="balance" value=""/></p>
+              <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="add {{add_symbol}}" style="float: right;"/></p>
           </div>
         </form>
+             </div>
 
-        <div style="{{ticker_style}}">
-            <h1>Ticker Symbol Lookup</h1>
-	    <p>{{ticker_description}}</p>
-	    <table border=1>
-	        <thead>
-	            <tr>
-		        <th>symbol</th>
-		        <th>companyName</th>
-		        <th>exchange</th>
-		        <th>industry</th>
-		        <th>website</th>
-		        <th>CEO</th>
-		        <th>issueType</th>
-		        <th>sector</th>
-		    </tr>
-	        </thead>
-	        <tbody>
-		    <tr>
-		        <td>{{ticker_symbol}}</td>
-		        <td>{{ticker_name}}</td>
-		        <td>{{ticker_exchange}}</td>
-		        <td>{{ticker_industry}}</td>
-		        <td>{{ticker_website}}</td>
-		        <td>{{ticker_ceo}}</td>
-		        <td>{{ticker_issuetype}}</td>
-		        <td>{{ticker_sector}}</td>
-		    </tr>
-	        </tbody>
-	    </table>
+            <h1>Adjustments</h1>
+            <p><span>symbol: </span><select id="id" name="symbol">{{symbol_options | safe}}</select></p>
+            <p><span>balance: </span><input type="text" name="balance" value=""/></p>
+         <form action="#" method="post">
+          <div class="form_settings">
+            <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="adjust" style="float: right;"/></p>
+          </div>
+        </form>
         </div>
-      </div>
-    </div>
+        </div>
     <div id="content_footer"></div>
     <div id="footer">
       <p><a href="{{url_for("index")}}">Home</a> | <a href="{{url_for("folder")}}">Folder</a> | <a href="{{url_for("defaults")}}">Defaults</a> | <a href="{{url_for("history")}}">History</a></p>
       <p>Copyright &copy; shadowplay_2  | <a href="http://www.html5webtemplates.co.uk">design from HTML5webtemplates.co.uk</a></p>
     </div>
-  </div>
+    </div>
 </body>
 </html>
