--- a/templates/history.html
+++ b/templates/history.html
@@ -103,11 +103,16 @@
         <h2>Tables</h2>
         <p>Tables should be used to display data and not used for laying out your website:</p>
         <table style="width=100%; border-spacing=0;">
-          <tr><th>Item</th><th>Description</th></tr>
-          <tr><td>Item 1</td><td>Description of Item 1</td></tr>
-          <tr><td>Item 2</td><td>Description of Item 2</td></tr>
-          <tr><td>Item 3</td><td>Description of Item 3</td></tr>
-          <tr><td>Item 4</td><td>Description of Item 4</td></tr>
+          <tr><th>Remove</th><th>Item</th><th>Description</th></tr>
+          <tr><td></td><td>Item 1</td><td>Description of Item 1</td></tr>
+          <tr><td><input class="checkbox" type="checkbox" name="name" value="x" /></td><td>Item 2</td><td>Description of Item 2</td></tr>
+          <tr><td><input class="checkbox" type="checkbox" name="name" value="x" /></td><td>Item 3</td><td>Description of Item 3</td></tr>
+
+            <tr>
+                <td><input class="checkbox" type="checkbox" name="name" value="x" /></td>
+                <td>Item 4</td>
+                <td>Description of Item 4</td>
+            </tr>
         </table>
         <h2>Form Elements</h2>
         <form action="#" method="post">
