--- a/templates/history.html
+++ b/templates/history.html
@@ -32,21 +32,25 @@
     <div id="content_header"></div>
     <div id="site_content">
       <div class="sidebar">
-        <!-- insert your sidebar items here -->
-        <ul>
-          <li><a href="https://amazon.com/author/smithja" target="_blank" >my Amazon Bookshelf</a></li>
-          <li><a href="https://github.com/meprogrammerguy" target="_blank" >my GitHub page</a></li>
-          <li><a href="http://meprogrammerguy.com/" target="_blank" >my Blog</a></li>
-          <li><a href="https://twitter.com/meprogrammerguy/" target="_blank" >my Twitter</a></li>
-          <li><a href="http://www.wallstreetsurvivor.com/accountoverview/" target="_blank" >Wall Street Survivor</a></li>
-        </ul>
-        <h3>Search</h3>
-        <form method="post" action="#" id="search_form">
-          <p>
-            <input class="search" type="text" onfocus="this.value=''" name="search_field" value="enter year or all" />
-            <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="{{ url_for('static', filename='search.png') }}" alt="Search" title="Search" />
-          </p>
-        </form>
+            <h3>Latest News</h3>
+            {% for note in notes %}
+                <h5>{{ note.noteDate() }}</h5>
+                <p>{{ note.content }}</p>
+            {% endfor %}
+            <ul>
+                <li><a href="https://amazon.com/author/smithja" target="_blank" >my Amazon Bookshelf</a></li>
+                <li><a href="https://github.com/meprogrammerguy" target="_blank" >my GitHub page</a></li>
+                <li><a href="http://meprogrammerguy.com/" target="_blank" >my Blog</a></li>
+                <li><a href="https://twitter.com/meprogrammerguy/" target="_blank" >my Twitter</a></li>
+                <li><a href="http://www.wallstreetsurvivor.com/accountoverview/" target="_blank" >Wall Street Survivor</a></li>
+            </ul>
+            <h3>Search</h3>
+            <form method="post" action="#" id="search_form">
+            <p>
+                <input class="search" type="text" onfocus="this.value=''" name="search_field" value="enter year or all" />
+                <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="{{ url_for('static', filename='search.png') }}" alt="Search" title="Search" />
+            </p>
+            </form>
       </div>
       <div id="content">
         <!-- insert the page content here -->
