hide the history visual stuff

--- a/templates/history.html
+++ b/templates/history.html
@@ -57,6 +57,7 @@
         <h1>History</h1>
         <h4 class = "center">Year : {{year_string}}</h4>
         {{table | safe}}
+        <div class ="left" style="{{history_style}}">
         <p>This page contains examples of all the styled elements available as part of this design. Use this page for reference, whilst you build your website.</p>
         <h2>Headings</h2>
         <p>These are the different heading formats:</p>
@@ -129,6 +130,7 @@
           </div>
         </form>
       </div>
+    </div>
     </div>
     <div id="content_footer"></div>
     <div id="footer">
