--- a/templates/history.html
+++ b/templates/history.html
@@ -108,16 +108,19 @@
         <h2>Tables</h2>
         <p>Tables should be used to display data and not used for laying out your website:</p>
         <table style="width=100%; border-spacing=0;">
-          <tr><th>Remove</th><th>Item</th><th>Description</th></tr>
+        <form action="#" method="post">
+          <tr><th></th><th>Item</th><th>Description</th></tr>
           <tr><td></td><td>Item 1</td><td>Description of Item 1</td></tr>
-          <tr><td><input class="checkbox" type="checkbox" name="name" value="x" /></td><td>Item 2</td><td>Description of Item 2</td></tr>
-          <tr><td><input class="checkbox" type="checkbox" name="name" value="x" /></td><td>Item 3</td><td>Description of Item 3</td></tr>
+          <tr><td><input class="submit" type="submit" name="action_2" value="remove" /></td><td>Item 2</td><td>Description of Item 2</td></tr>
+          <tr><td><input class="submit" type="submit" name="action_3" value="remove" /></td><td>Item 3</td><td>Description of Item 3</td></tr>
 
             <tr>
-                <td><input class="checkbox" type="checkbox" name="name" value="x" /></td>
+                <td><input class="submit" type="submit" name="action_4" value="remove" /></td>
                 <td>Item 4</td>
                 <td>Description of Item 4</td>
             </tr>
+        </form>
+
         </table>
         <h2>Form Elements</h2>
         <form action="#" method="post">
