speed up and logic fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
             {{table | safe}}
             <form action="#" method="post">
             <div class="form_settings">
-                <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="{{post_display}}" style="float: right;"/></p>
+                <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="{{post_display}}" style="{{post_background}} float: right;"/></p>
             </form>
             </div>
         </div>
