Create a reset defaults routine

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,8 +63,9 @@
                 <p><strong>Initial {{initial_value | safe}}</strong></p>
                 <p><strong>Profit {{profit_value | safe}} or {{profit_percent | safe}}</strong></p>
             </div>
-            <h1>A.I.M. method</h1>
+            <h1>(AIM) System</h1>
             <div class="center">
+                <h6>devised by: Robert Lichello - HOH TO MAKE $1,000,000 IN THE STOCK MARKET AUTOMATICALLY! (Fourth Revised Edition) &copy; 2001</h6>
                 <h4>Check list</h4>
                 <p>Correct any issues with your folder to get accurate numbers</p>
                 <p>You do not have to post, buy or sell if you are just looking</p>
