remove interval column

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,10 +66,12 @@
             <h1>(AIM) System</h1>
             <div class="center">
                 <h6>devised by: Robert Lichello - HOH TO MAKE $1,000,000 IN THE STOCK MARKET AUTOMATICALLY! (Fourth Revised Edition) &copy; 2001</h6>
-                <h4>Check list</h4>
-                <p>Correct any issues with your folder to get accurate numbers</p>
-                <p>You do not have to post, buy or sell if you are just looking</p>
-                <p>When you do press the buy or sell make sure to follow through with your broker</p>
+                <ul>
+                    <h4>Check list</h4>
+                    <li>Correct any issues with your folder to get accurate numbers</li>
+                    <li>You do not have to post, buy or sell if you are just looking</li>
+                    <li>When you do press the buy or sell make sure to follow through with your broker</li>
+                </ul>
             </div>
             {{table | safe}}
             <form action="#" method="post">
