--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,7 @@
                 <p><strong>Initial {{initial_value | safe}}</strong></p>
                 <p><strong>Profit {{profit_value | safe}} or {{profit_percent | safe}}</strong></p>
             </div>
+            <br class="clear"/>
             <h1>(AIM) System</h1>
             <div class="center">
                 <h6>devised by: Robert Lichello - HOH TO MAKE $1,000,000 IN THE STOCK MARKET AUTOMATICALLY! (Fourth Revised Edition) &copy; 2001</h6>
