--- a/templates/defaults.html
+++ b/templates/defaults.html
@@ -49,40 +49,37 @@
             <p style="color:red;">{{feedback | safe}}</p>
         </div>
         <div id="content">
+            <h1>Defaults</h1>
+            {{table | safe}}
+            <p class="center" style="color:blue;">{{api_key_warning}}</p>
+            <form action="#" method="post">
+            <div class="form_settings">
+                <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="reset" style="float: right;"/></p>
+            </div>
+            </form>
+            <br class="clear"/>
+            <h1>Adjustments</h1>
+            <form action="#" method="post">
+            <div class="center">
+                <p><select id="id" name="column">{{column_options | safe}}</select>
+                <input type="text" name="value" value=""/></p>
+            </div>
+            <div class="form_settings">
+                <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="adjust" style="float: right;"/></p>
+            </div>
+            </form>
+            <br class="clear"/>
+            <h1>Stock Polling</h1>
+            <form action="#" method="post">
             <div>
-                <h1>Defaults</h1>
-                {{table | safe}}
-                <form action="#" method="post">
-                <div class="form_settings">
-                    <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="reset" style="float: right;"/></p>
-                </div>
-                </form>
+                <p class="center" style="color:{{daemon_color}}">{{daemon_check}}</p>
+                <p class="center">{{daemon_info}}</p>
+                {{daemon_table | safe}}
             </div>
-            <div>
-                <h1>Adjustments</h1>
-                <form action="#" method="post">
-                <div class="center">
-                    <p><select id="id" name="column">{{column_options | safe}}</select>
-                    <input type="text" name="value" value=""/></p>
-                </div>
-                <div class="form_settings">
-                    <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="adjust" style="float: right;"/></p>
-                </div>
-                </form>
+            <div class="form_settings">
+                <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="{{daemon_action}}" style="float: right;"/></p>
             </div>
-            <div class="left">
-                <h1>Stock Polling</h1>
-                <form action="#" method="post">
-                <div>
-                    <p class="center" style="color:{{daemon_color}}">{{daemon_check}}</p>
-                    <p class="center">{{daemon_info}}</p>
-                    {{daemon_table | safe}}
-                </div>
-                <div class="form_settings">
-                    <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="{{daemon_action}}" style="float: right;"/></p>
-                </div>
-                </form>
-            </div>
+            </form>
         </div>
     </div>
     <div id="content_footer"></div>
